@startuml

title __DHBWORLD.APP's Class Diagram__\n

  namespace com.main.dhbworld {
    namespace BroadcastReceiver {
      class com.main.dhbworld.BroadcastReceiver.UpdateEventsReceiver {
      }
    }
  }
  

  namespace com.main.dhbworld {
    class com.main.dhbworld.BuildConfig {
    }
  }
  

  namespace com.main.dhbworld {
    namespace Enums {
      enum InteractionState {
      }
    }
  }
  

  namespace com.main.dhbworld {
    namespace Firebase {
      interface com.main.dhbworld.Firebase.CurrentStatusListener {
      }
    }
  }
  

  namespace com.main.dhbworld {
    namespace Firebase {
      interface com.main.dhbworld.Firebase.DataSendListener {
      }
    }
  }
  

  namespace com.main.dhbworld {
    namespace Firebase {
      class com.main.dhbworld.Firebase.Issue {
      }
    }
  }
  

  namespace com.main.dhbworld {
    namespace Firebase {
      interface com.main.dhbworld.Firebase.SignedInListener {
      }
    }
  }
  

  namespace com.main.dhbworld {
    namespace Firebase {
      class com.main.dhbworld.Firebase.TooManyClicksException {
      }
    }
  }
  

  namespace com.main.dhbworld {
    namespace Firebase {
      class com.main.dhbworld.Firebase.Utilities {
      }
    }
  }
  

  namespace com.main.dhbworld {
    namespace Fragments {
      class com.main.dhbworld.Fragments.DialogCofirmationUserInteraction {
      }
    }
  }
  

  namespace com.main.dhbworld {
    class com.main.dhbworld.MainActivity {
    }
  }
  

  namespace com.main.dhbworld {
    namespace Services {
      class com.main.dhbworld.Services.UserInteractionMessagingService {
      }
    }
  }
  

  namespace com.main.dhbworld {
    class com.main.dhbworld.UserInteraction {
    }
  }
  

  com.main.dhbworld.BroadcastReceiver.UpdateEventsReceiver -up-|> android.content.BroadcastReceiver
  com.main.dhbworld.Firebase.Utilities o-- com.main.dhbworld.Firebase.CurrentStatusListener : currentStatusListener
  com.main.dhbworld.Firebase.Utilities o-- com.main.dhbworld.Firebase.DataSendListener : dataSendListener
  com.main.dhbworld.Firebase.Utilities o-- com.main.dhbworld.Firebase.SignedInListener : signedInListener
  com.main.dhbworld.Fragments.DialogCofirmationUserInteraction -up-|> com.google.android.material.dialog.MaterialAlertDialogBuilder
  com.main.dhbworld.Fragments.DialogCofirmationUserInteraction o-- com.main.dhbworld.Enums.InteractionState : selectedState
  com.main.dhbworld.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.main.dhbworld.Services.UserInteractionMessagingService -up-|> com.google.firebase.messaging.FirebaseMessagingService
  com.main.dhbworld.UserInteraction -up-|> androidx.appcompat.app.AppCompatActivity
  com.main.dhbworld.UserInteraction o-- com.main.dhbworld.Firebase.Utilities : firebaseUtilities
  com.main.dhbworld.UserInteraction o-- com.main.dhbworld.Enums.InteractionState : zustandDruker
  com.main.dhbworld.UserInteraction o-- com.main.dhbworld.Enums.InteractionState : zustandKaffee
  com.main.dhbworld.UserInteraction o-- com.main.dhbworld.Enums.InteractionState : zustandKantine


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
